# AutowareOnnxTestUI

./: .gitignore  DESIGN.md  README.md  app.py  pyproject.toml  sample.py  visualizer.py
config/: model_registry.yaml
models/: base.py
models/image/: semantic_seg.py  traffic_light.py  yolox.py
pages/: 1_Image_Detection.py  2_Segmentation.py  3_Traffic_Light.py  4_PointCloud_Detection.py
scripts/: download_models.py  setup_mac.sh  test_pipeline.py
utils/: config_loader.py  input_source.py  visualization.py
